--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,12 +1,10 @@
-version: '3.8'
-
 services:
   php:
     build:
       context: ./php
     container_name: php-container
     volumes:
-      - ./php:/var/www/html
+      - ../:/var/www/html
     networks:
       - app-network
     depends_on:
