--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -21,6 +21,8 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
       - app-network
+    ports:
+      - "5432:5432"
 
   nginx:
     image: nginx:alpine
